# MODULAR-RAG-MCP-SERVER

./: .gitignore  DEV_SPEC.md  README.md  pyproject.toml
config/: settings.yaml  settings.yaml.example
config/prompts/: metadata_enrichment.txt
docs/superpowers/specs/: 2026-04-07-modular-rag-mcp-server-code-review-design.md
scripts/: evaluate.py  ingest.py  query.py
src/core/: settings.py
src/core/query_engine/: dense_retriever.py  hybrid_search.py  query_processor.py  sparse_retriever.py
src/core/response/: citation_generator.py
src/core/trace/: trace_collector.py
src/ingestion/: document_manager.py  pipeline.py
src/ingestion/chunking/: document_chunker.py
src/ingestion/embedding/: batch_processor.py  dense_encoder.py  sparse_encoder.py
src/ingestion/storage/: bm25_indexer.py  image_storage.py  vector_upserter.py
src/ingestion/transform/: chunk_refiner.py  image_captioner.py  metadata_enricher.py
src/libs/embedding/: azure_embedding.py  embedding_factory.py  ollama_embedding.py  openai_embedding.py
src/libs/llm/: azure_llm.py  azure_vision_llm.py  deepseek_llm.py  ollama_llm.py  openai_llm.py  openai_vision_llm.py
src/libs/loader/: __init__.py  docling_loader.py  file_integrity.py  loader_factory.py
src/libs/reranker/: reranker_factory.py  tei_reranker.py
src/libs/splitter/: __init__.py  recursive_splitter.py  semantic_markdown_splitter.py  splitter_factory.py
src/libs/vector_store/: __init__.py  base_vector_store.py  chroma_store.py  opensearch_store.py  vector_store_factory.py
src/mcp_server/: server.py
src/mcp_server/tools/: get_document_summary.py  list_collections.py  (+1 more)
tests/integration/: test_hybrid_search.py  test_ingestion_pipeline.py  test_new_ingestion_flow.py
tests/unit/: test_config_loading.py  test_dashboard_config.py  test_document_manager.py  test_embedding_factory.py  test_get_document_summary.py  test_list_collections.py  test_new_arch_smoke.py  test_ollama_embedding.py  test_opensearch_store_resilience.py  test_query_knowledge_hub.py  test_recursive_splitter_lib.py  test_splitter_factory.py  test_tei_reranker.py  test_trace_context.py
(+25 files in other folders)
